rename job to avoid namespace conflict with lib. dashboard fix so it does not crash if thumbnail missing. css fixes to make the site more readable

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -25,7 +25,7 @@
 //
 // Notice that Active Admin CSS rules are nested within a
 // 'body.active_admin' selector to prevent conflicts with
-// other pages in the app. It is best to wrap your changes in a 
+// other pages in the app. It is best to wrap your changes in a
 // namespace so they are properly recognized. You have options
 // if you e.g. want different styles for different namespaces:
 //
@@ -33,8 +33,8 @@
 // .admin_namespace    applies to the admin namespace (eg: /admin)
 // .other_namespace    applies to a custom namespace named other (eg: /other)
 body.active_admin {
-  .special_instructions { 
-    min-width: 180px; 
+  .special_instructions {
+    min-width: 180px;
   }
 }
 
@@ -47,11 +47,11 @@ body.active_admin {
   }
 }
 body.active_admin {
-  .admin-information { 
+  .admin-information {
     background-color: rgba(100,150,90,0.5);
     padding: 1em;
   }
-  .admin-information h2, h3 { color:white;}
+  .admin-information h2, h3 { color:black;}
 }
 
 th.date_patron_deliverables_complete a, body.active_admin table.index_table th.date_patron_deliverables_complete a:visited,
